# openrr

./: .clang-format  .clippy.toml  .cspell.json  .deny.toml  .editorconfig  .gitignore  .markdownlint.yml  Cargo.toml  README.md  __dev.sh  crates.js  help.html  rustfmt.toml  settings.html  src-files.js
arci/: Cargo.toml  README.md  all.html  attr.async_trait.html  enum.Error.html  enum.JointPositionLimiterStrategy.html  fn.copy_joint_positions.html  index.html  sidebar-items.js  struct.BaseVelocity.html  struct.DummyGamepad.html  struct.DummyJointTrajectoryClient.html  struct.DummyLaserScan2D.html  struct.DummyLocalization.html  struct.DummyMotorDriveEffort.html  struct.DummyMotorDrivePosition.html  struct.DummyMotorDriveVelocity.html  struct.DummyMoveBase.html  struct.DummyNavigation.html  struct.DummySpeaker.html  struct.DummyTransformResolver.html  struct.EachJointDiffCondition.html  struct.JointPositionDifferenceLimiter.html  struct.JointPositionLimit.html  struct.JointPositionLimiter.html  struct.JointTrajectoryClientsContainer.html  struct.JointVelocityLimiter.html  struct.Lazy.html  struct.PartialJointTrajectoryClient.html  struct.Scan2D.html  struct.TotalJointDiffCondition.html  struct.TrajectoryPoint.html  struct.WaitFuture.html  trait.CompleteCondition.html  trait.Gamepad.html  trait.JointTrajectoryClient.html  trait.LaserScan2D.html  trait.Localization.html  trait.MotorDriveEffort.html  trait.MotorDrivePosition.html  (+11 more)
arci-gamepad-gilrs/: Cargo.toml  README.md
arci-gamepad-gilrs/examples/: gilrs_check_keymap.rs
arci-gamepad-gilrs/src/: lib.rs
arci-gamepad-keyboard/: Cargo.toml  README.md
arci-gamepad-keyboard/examples/: check_keymap.rs  keyboard_check_keymap.rs
arci-gamepad-keyboard/src/: lib.rs
arci-ros/: CMakeLists.txt  Cargo.toml  README.md  build.rs  package.xml
arci-ros/examples/: arci_ros_client.rs  client.rs  cmd_vel.rs  joy_gamepad_example.rs  resolve_transformation.rs  ros1_cmd_vel.rs  ros1_diff_drive.rs
arci-ros/ros_msgs/: LICENSE.BSD
arci-ros/src/: cmd_vel_move_base.rs  error.rs  joy_gamepad.rs  lib.rs  msg.rs  msg_utils.rs  ros_control.rs  ros_control_action_client.rs  ros_control_client.rs  ros_control_common.rs  ros_localization_client.rs  ros_nav_client.rs  ros_robot_client.rs  ros_speak_client.rs  ros_transform_resolver.rs  rosrust_utils.rs
arci-ros/tests/: test_cmdvel_base.rs  test_control_client.rs  test_joy.rs  test_localization_client.rs  test_nav_client.rs  test_robot_client.rs  test_rosrust_utils.rs  test_speak_client.rs  test_transform_resolver.rs
arci-ros2/: Cargo.toml  README.md
arci-ros2/examples/: cmd_vel.rs  localization_rx.rs  localization_tx.rs  navigation.rs  ros2_cmd_vel.rs  ros2_control.rs  ros2_laser_scan.rs  ros2_localization_client.rs
arci-ros2/src/: __navigation_pubsub.rs  cmd_vel_move_base.rs  joy_gamepad.rs  lib.rs  motor_drive.rs  msg.rs  navigation.rs  navigation_pubsub.rs  node.rs  plugin.rs  ros2_control.rs  ros2_laser_scan.rs  ros2_localization_client.rs  ros2_transform_resolver.rs  utils.rs
arci-ros2/tests/: test_cmd_vel.rs  test_cmd_vel_with_odom.rs  test_navigation.rs  test_ros2_control.rs  test_ros2_laser_scan.rs  test_ros2_localization_client.rs  test_ros2_transform_resolver.rs
arci-speak-audio/: Cargo.toml  README.md
arci-speak-audio/examples/: audio_speak.rs
arci-speak-audio/src/: lib.rs
arci-speak-cmd/: Cargo.toml  README.md
arci-speak-cmd/examples/: local_command.rs
arci-speak-cmd/src/: lib.rs
arci-urdf-viz/: Cargo.toml  README.md
arci-urdf-viz/examples/: move_to_zero.rs
arci-urdf-viz/src/: client.rs  lib.rs  utils.rs
arci-urdf-viz/tests/: test_client.rs  test_web.rs  web_server.rs
arci/error/: enum.Error.html
arci/gamepad/: enum.Axis.html  enum.Button.html  enum.GamepadEvent.html  index.html  sidebar-items.js  trait.Gamepad.html
arci/src/: clients.rs  error.rs  lib.rs  traits.rs  utils.rs  waits.rs
arci/tests/: test_utils.rs  test_waits.rs
arci/utils/: fn.get_joint_index.html  fn.move_joint_until_stop.html  index.html  sidebar-items.js
arci/waits/: struct.EachJointDiffCondition.html  struct.TotalJointDiffCondition.html  struct.WaitFuture.html  trait.CompleteCondition.html
openrr/: Cargo.toml  all.html  index.html  sidebar-items.js
openrr-apps/: Cargo.toml  README.md
openrr-apps/command/: pr2_cmd_collision.txt  pr2_cmd_ik.txt  pr2_cmd_joints.txt  pr2_cmd_ros.txt  pr2_cmd_urdf_viz.txt  sample_cmd_urdf_viz.txt  ur10_cmd_collision.txt  ur10_cmd_ik.txt  ur10_cmd_joints.txt  ur10_cmd_ros.txt  ur10_cmd_urdf_viz.txt
openrr-apps/config/: irobot_create_robot_client_config_ros2.toml  irobot_create_teleop_config_ros2.toml  pr2_cmd_collision.txt  pr2_cmd_joints.txt  pr2_cmd_ros.txt  pr2_cmd_urdf_viz.txt  pr2_robot_client_config_for_command_ros.toml  pr2_robot_client_config_for_command_urdf_viz.toml  pr2_robot_client_config_for_ros.toml  pr2_robot_client_config_for_teleop_ros.toml  pr2_robot_client_config_for_teleop_urdf_viz.toml  pr2_robot_client_config_for_urdf_viz.toml  pr2_teleop_config_ros.toml  pr2_teleop_config_urdf_viz.toml  sample_cmd_urdf_viz.txt  sample_robot_client_config_for_command_urdf_viz.toml  sample_robot_client_config_for_plugin.toml  sample_robot_client_config_for_teleop_urdf_viz.toml  sample_robot_client_config_for_urdf_viz.toml  sample_robot_client_config_for_urdf_viz_minimal.toml  sample_robot_client_config_for_urdf_viz_with_audio_speaker.toml  sample_robot_client_config_for_urdf_viz_with_multiple_speaker.toml  sample_teleop_config_plugin.toml  sample_teleop_config_urdf_viz.toml  ur10_cmd.txt  (+18 more)
openrr-base/: Cargo.toml
openrr-client/: Cargo.toml  README.md  sample.urdf
openrr-command/: Cargo.toml  README.md
openrr-config/: Cargo.toml  README.md
openrr-gui/: Cargo.toml  README.md  dark_theme.toml  index.html
openrr-planner/: Cargo.toml  README.md  obstacles.urdf  sample.urdf
openrr-plugin/: Cargo.toml  README.md
openrr-remote/: .gitignore  Cargo.toml  README.md  build.rs
openrr-sleep/: Cargo.toml  README.md
openrr-teleop/: Cargo.toml  README.md
openrr-test/: Cargo.toml  README.md
openrr-tracing/: Cargo.toml  README.md
(+95885 files in other folders)
