[package]
name = "arci-gamepad-gilrs"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
description = "arci::Gamepad implementation using gilrs"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
arci = "0.0.7"
flume = "0.10"
gilrs = { version = "0.10.0", features = ["serde-serialize"] }
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1.1"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
