[package]
name = "arci-gamepad-keyboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci::Gamepad implementation for keyboard"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
arci = "0.0.7"
flume = "0.10"
tracing = { version = "0.1", features = ["log"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[dev-dependencies]
assert_approx_eq = "1.1"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
