[package]
name = "arci-ros"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "arci implementation using ROS1"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
anyhow = "1.0"
arci = "0.0.6"
auto_impl = "0.5"
flume = "0.10"
nalgebra = "0.29"
once_cell = "1"
parking_lot = "0.11"
paste = "1.0"
ros-nalgebra = "0.0.5"
rosrust = "0.9"
schemars = "0.8.3"
serde = { version = "1", features = ["derive"] }
tf_rosrust = "0.0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1.0"
flaky_test = "0.1"
k = "0.26"

# for tests/utils (using same version of rosrust 0.9.5)

[target.'cfg(unix)'.dev-dependencies]
nix = "0.23.0"
once_cell = "1.8.0"
portpicker = "0.1.1"
