[package]
name = "arci-ros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci implementation using ROS1"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
anyhow.workspace = true
arci.workspace = true
auto_impl.workspace = true
flume.workspace = true
nalgebra.workspace = true
once_cell.workspace = true
paste.workspace = true
ros-nalgebra.workspace = true
rosrust.workspace = true
schemars.workspace = true
serde.workspace = true
tf_rosrust.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
urdf-rs.workspace = true

[dev-dependencies]
arci-gamepad-gilrs.workspace = true
arci-gamepad-keyboard.workspace = true
assert_approx_eq.workspace = true
flaky_test.workspace = true
k.workspace = true
openrr-base.workspace = true
openrr-teleop.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix.workspace = true
once_cell.workspace = true
portpicker.workspace = true
