<?xml version="1.0"?>
<package format="2">
  <name>arci-ros</name>
  <version>0.0.1</version>
  <description>ROS1 implementation of arci</description>

  <maintainer email="ogura@smilerobotics.com">Takashi Ogura</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <export>
  </export>
</package>
