[package]
name = "arci-ros2"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "arci implementation using ROS2"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
ros2 = ["r2r"]

[dependencies]
abi_stable = "0.11"
anyhow = "1.0"
arci = "0.0.6"
futures = "0.3"
once_cell = "1"
openrr-plugin = "0.0.6"
parking_lot = "0.12"
r2r = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1.1"
flaky_test = "0.1"
