[package]
name = "arci-ros2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci implementation using ROS2"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
ros2 = ["r2r"]

[dependencies]
abi_stable = "0.11"
anyhow = "1.0"
arci = "0.0.7"
futures = "0.3"
once_cell = "1"
openrr-plugin = "0.0.7"
parking_lot = "0.12"
r2r = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.6"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1.1"
flaky_test = "0.1"
