[package]
name = "arci-ros2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci implementation using ROS2"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
ros2 = ["r2r"]

[dependencies]
abi_stable.workspace = true
anyhow.workspace = true
arci.workspace = true
flume.workspace = true
futures.workspace = true
once_cell.workspace = true
openrr-plugin.workspace = true
parking_lot.workspace = true
r2r = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
flaky_test.workspace = true
