[package]
name = "arci-speak-audio"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
description = "arci::Speaker implementation for playing audio files"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
arci = "0.0.7"
rodio = "0.16.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["sync", "parking_lot"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
