[package]
name = "arci-speak-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci::Speaker implementation for playing audio files"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
arci = "0.0.7"
rodio = { version = "0.16.0", default-features = false, features = ["flac", "vorbis", "wav", "symphonia-mp3"] } # TODO: use default features again once https://github.com/RustAudio/rodio/pull/453 released
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1", features = ["sync", "parking_lot"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
