[package]
name = "arci-speak-cmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci::Speaker implementation using local command"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
arci = "0.0.7"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "parking_lot"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
