[package]
name = "arci-speak-cmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci::Speaker implementation using local command"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
arci.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "parking_lot"] }

[dev-dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
