[package]
name = "arci-urdf-viz"
version = "0.0.5"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2018"
license = "Apache-2.0"
description = "arci implementation using urdf-viz"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"
documentation = "https://docs.rs/arci-urdf-viz"

[dependencies]
anyhow = "1.0"
arci = "0.0.5"
nalgebra = "0.26"
openrr-planner = { version = "0.0.5", default-features = false }
openrr-sleep = "0.0.5"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"
ureq = { version = "2", features = ["json"] }
url = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
actix-web = "3"
assert_approx_eq = "1.1"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
