[package]
name = "arci-urdf-viz"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "arci implementation using urdf-viz"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
anyhow = "1.0"
arci = "0.0.6"
openrr-planner = { version = "0.0.6", default-features = false }
openrr-sleep = "0.0.6"
parking_lot = "0.12"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "parking_lot"] }
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"
ureq = { version = "2", features = ["json"] }
url = "2.0"

[dev-dependencies]
assert_approx_eq = "1.1"
easy-ext = "1"
flaky_test = "0.1"
portpicker = "0.1"
tokio = { version = "1.0", features = ["full"] }
urdf-viz = "0.35"
