[package]
name = "arci-urdf-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "arci implementation using urdf-viz"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
anyhow.workspace = true
arci.workspace = true
openrr-planner.workspace = true
schemars.workspace = true
scoped-sleep.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
urdf-rs.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
easy-ext.workspace = true
flaky_test.workspace = true
portpicker.workspace = true
tokio = { workspace = true, features = ["full"] }
urdf-viz.workspace = true
