[package]
name = "arci"
version = "0.0.6"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Abstract Robot Control Interface"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
auto_impl = "0.4"
futures = "0.3"
nalgebra = "0.26"
once_cell = "1"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
toml = "0.5"
