[package]
name = "openrr-apps"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "applications using openrr"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[features]
default = ["assimp", "gui", "ros"]
assimp = [
    "openrr-client/assimp",
    "openrr-command/assimp",
    "openrr-teleop/assimp",
]
ros = ["arci-ros"]
gui = ["openrr-gui"]
# Enables the `iced_glow` renderer on GUI.
# This might be useful if the default renderer doesn't work.
glow = ["openrr-gui/glow"]

[dependencies]
anyhow = "1.0"
arci = "0.0.6"
arci-gamepad-gilrs = "0.0.6"
arci-speak-audio = "0.0.6"
arci-speak-cmd = "0.0.6"
arci-urdf-viz = "0.0.6"
k = "0.26"
openrr-client = { version = "0.0.6", default-features = false }
openrr-command = { version = "0.0.6", default-features = false }
openrr-config = "0.0.6"
openrr-plugin = "0.0.6"
openrr-teleop = { version = "0.0.6", default-features = false }
rand = "0.8.0"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3.21"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urdf-rs = "0.6"

arci-ros = { version = "0.0.6", optional = true }
openrr-gui = { version = "0.0.6", optional = true, default-features = false }

[target.'cfg(unix)'.dependencies]
arci-gamepad-keyboard = "0.0.6"

# https://github.com/alexcrichton/cmake-rs/issues/131
cmake = "=0.1.45"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "openrr_apps_robot_command"
path = "src/bin/robot_command.rs"

[[bin]]
name = "openrr_apps_robot_teleop"
path = "src/bin/robot_teleop.rs"

[[bin]]
name = "openrr_apps_joint_position_sender"
path = "src/bin/joint_position_sender.rs"
required-features = ["gui"]

[[bin]]
name = "openrr_apps_velocity_sender"
path = "src/bin/velocity_sender.rs"
required-features = ["gui"]

[[bin]]
name = "openrr_apps_config"
path = "src/bin/config.rs"
