[package]
name = "openrr-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arci.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true

[lints]
workspace = true
