[package]
name = "openrr-client"
version = "0.0.6"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2021"
license = "Apache-2.0"
description = "openrr useful client libraries"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[features]
default = ["assimp"]
assimp = ["openrr-planner/assimp"]

[dependencies]
anyhow = "1.0"
arci = "0.0.6"
k = { version = "0.25", features = ["serde-serialize"] }
openrr-planner = { version = "0.0.6", default-features = false }
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
tokio = { version = "1.0", features = ["full"] }
