[package]
name = "openrr-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr useful client libraries"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[features]
default = ["assimp"]
assimp = ["openrr-planner/assimp"]

[dependencies]
anyhow = "1.0"
arci = "0.0.7"
k = { version = "0.29", features = ["serde-serialize"] }
openrr-config = "0.0.7"
openrr-planner = { version = "0.0.7", default-features = false }
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.7"
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
tokio = { version = "1.0", features = ["full"] }
