[package]
name = "openrr-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr useful client libraries"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[features]
default = []

[dependencies]
anyhow.workspace = true
arci.workspace = true
k = { workspace = true, features = ["serde"] }
openrr-config.workspace = true
openrr-planner.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
urdf-rs.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
