[package]
name = "openrr-command"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr command line tool library"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[features]
default = ["assimp"]
assimp = ["openrr-client/assimp"]

[dependencies]
arci = "0.0.7"
async-recursion = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
k = "0.29"
openrr-client = { version = "0.0.7", default-features = false }
rustyline = "10.0.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
